style(index.html): move section element inside header element to improve HTML structure and semantics fix(script.js): add alt attribute to carousel poster images for accessibility style(style.css): change height and margin properties of .input__wrap class to improve layout and spacing

--- a/style.css
+++ b/style.css
@@ -13,15 +13,18 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-section {
-  height: 50px;
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .input__wrap {
   display: flex;
   align-items: center;
   column-gap: 2rem;
-  padding-left: 3rem;
+  height: 7vh;
+  margin-bottom: 2rem;
 }
 
 input {
@@ -170,8 +173,6 @@ h2:hover {
   margin: 2rem;
   position: relative;
   max-width: 1200px;
-  width: 100%;
-  height: 300px;
   overflow: hidden;
 }
 
